--- a/dev/sass/_main.scss
+++ b/dev/sass/_main.scss
@@ -249,6 +249,23 @@ section, aside {
 @include local('high', $playercountHigh);
 @include local('extreme', $playercountExtreme);
 
+
+.title-cell {
+	// max-width: 500px;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	line-height: 1.5; //avoid overflow-y kicking in
+}
+table.dataTable tbody tr td:first-child {
+	padding-top: 0;
+	padding-bottom: 0;
+}
+@media (max-width: $mobileBreakpoint) {
+	.title-cell {
+		max-width: 250px;
+	}
+}
+
 /* Compilation titles are invisible but exist for searching purposes */
 .sort-data {
 	display: none;
@@ -257,7 +274,7 @@ section, aside {
 .svg {
 	height: 1em;
 	width: 1em;
-	vertical-align: bottom;
+	//vertical-align: bottom;
 }
 
 .dropdown img {
